--- a/src/app/components/postlist/postlist.component.scss
+++ b/src/app/components/postlist/postlist.component.scss
@@ -1,12 +1,12 @@
 .post{
     width:90%;
-    background-color: rgb(38, 47, 63);
+    background-color: rgb(27, 27, 58);
     color: white;
     padding: 1rem;
     border-radius: 10px;
     display: grid;
     gap:1rem;
-    cursor: pointer;
+    
     align-items: center;
     h2{
         font-size: 24px;
@@ -16,8 +16,26 @@
         font-size: 16px;
         font-weight: 300;
     }
+    .buttons{
+        display: flex;
+        flex-direction: row;
+        gap:0.5rem;
+        justify-content: end;
+        button{
+            padding: 0.4rem 0.8rem;
+            background-color: rgb(83, 117, 135);
+            transition: all 0.2s ease-out;
+            border: none;
+            border-radius: 10px;
+            &:hover{
+                background-color: rgb(57, 57, 83);
+                color: white;
+            }
+        }
+    }
     @media(min-width: 748px){
         width:35rem;
+      
     }
 }
 .posts{
