--- a/src/app/components/postlist/postlist.component.html
+++ b/src/app/components/postlist/postlist.component.html
@@ -12,7 +12,7 @@
             <a routerLink="">
                 <button>Edit</button>
             </a>
-            <a href="">
+            <a href="" (click)="handleDelete(data.id)">
                 <button>Delete</button>
             </a>
         </div>
