fix: css styles for components

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<nav>
+    <h2>Posts</h2>
+    <div>
+        <a routerLink="/createposts">Create Posts</a>
+        <a routerLink="/login">Login</a>
+    </div>
+
+</nav>
