--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav>
-    <h2>Posts</h2>
-    <div>
+    <h2>
+        <a routerLink="/" class="name">Posts</a>
+    </h2>
+    <div class="actions">
         <a routerLink="/createposts">Create Posts</a>
         <a routerLink="/login">Login</a>
     </div>
