--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,8 +3,8 @@
         <a routerLink="/" class="name">Posts</a>
     </h2>
     <div class="actions">
-        <a routerLink="/createposts">Create Posts</a>
-        <a routerLink="/login">Login</a>
+        <a routerLink="createpost">Create Posts</a>
+        <a routerLink="login">Login</a>
     </div>
 
 </nav>
