fix:get and delete post features updated

--- a/src/app/components/postlist/postlist.component.html
+++ b/src/app/components/postlist/postlist.component.html
@@ -1,27 +1,23 @@
 <section class="posts">
-    @if(isLoading == true){
-        <app-loader></app-loader>
-    }
-    @else {
-            @for(data of postlistdata;track $index){
-        <div class="post">
-            <h2>{{data.title}}</h2>
-            <p>
-                {{data.body}}
-            </p>
-             <div class="buttons">
-            <a [routerLink]="[data.id]">
-                <button>View Comments</button>
-            </a>
-            <a routerLink="">
-                <button>Edit</button>
-            </a>
-            <a href="" (click)="handleDelete(data.id)">
-                <button>Delete</button>
-            </a>
-        </div>
-        </div>
-}
-    }
-
+  @if(isLoading == true){
+  <app-loader></app-loader>
+  } @else { @for(data of postlistdata;track $index){
+  <div class="post">
+    <h2>{{ data.title }}</h2>
+    <p>
+      {{ data.body }}
+    </p>
+    <div class="buttons">
+      <a [routerLink]="[data.id]">
+        <button>View Comments</button>
+      </a>
+      <a routerLink="">
+        <button>Edit</button>
+      </a>
+      <a>
+        <button (click)="handleDelete(data.id)">Delete</button>
+      </a>
+    </div>
+  </div>
+  } }
 </section>
