--- a/src/app/components/createpost/createpost.component.html
+++ b/src/app/components/createpost/createpost.component.html
@@ -1,3 +1,4 @@
 <form >
-    <input type="text" for>
+    <input type="text" formControlName="title">
+    <input type="text" formControlName="body">
 </form>
