feature: createpost form added with functionality

--- a/src/app/components/createpost/createpost.component.html
+++ b/src/app/components/createpost/createpost.component.html
@@ -1,4 +1,5 @@
-<form >
+<form [formGroup]="createpostForm" (ngSubmit)="handleSubmit()">
     <input type="text" formControlName="title">
     <input type="text" formControlName="body">
+    <button type="submit">Submit</button>
 </form>
