fix:add edit page functionality on login

--- a/src/app/components/editpost/editpost.component.scss
+++ b/src/app/components/editpost/editpost.component.scss
@@ -30,4 +30,8 @@ button{
     &:hover{
         background-color: rgb(18, 60, 78);
     }
+    .warning{
+          color: rgb(224, 61, 61);
+        font-size: 0.7rem;
+    }
 }
