fix: add view comment button when there is a comment

--- a/src/app/components/postlist/postlist.component.html
+++ b/src/app/components/postlist/postlist.component.html
@@ -8,7 +8,7 @@
       {{ data.body }}
     </p>
     <div class="buttons">
-      <a [routerLink]="[data.id]">
+      <a *ngIf="data.id != undefined" [routerLink]="[data.id]">
         <button>View Comments</button>
       </a>
     
