--- a/src/app/components/postlist/postlist.component.html
+++ b/src/app/components/postlist/postlist.component.html
@@ -3,8 +3,26 @@
   <app-loader></app-loader>
   } @else {
     <section class="postsection">
+      <div *ngFor="let data of (apiservice.postSubject$ | async)">
+       <div class="post">
+         <h2>{{ data.title }}</h2>
+        <p>{{ data.body }}</p>
+         <div class="buttons">
+      <a *ngIf="data.id != undefined" [routerLink]="[data.id]">
+        <button>View Comments</button>
+      </a>
+    
+        <a routerLink="" *ngIf="token?.userId == data.userId">
+        <button (click)="handleEdit(data.id)">Edit</button>
+      </a>
+      <a *ngIf="token?.userId == data.userId">
+        <button (click)="handleDelete(data.id)">Delete</button>
+      </a>
+    </div>
+       </div>
+      </div>
        @for(data of postlistdata;track $index){
-  <div class="post">
+    <div class="post">
     <h2>{{ data.title }}</h2>
     <p>
       {{ data.body }}
