--- a/src/app/components/postlist/postlist.component.scss
+++ b/src/app/components/postlist/postlist.component.scss
@@ -6,8 +6,8 @@
     border-radius: 10px;
     display: grid;
     gap:1rem;
-    
     align-items: center;
+
     h2{
         font-size: 24px;
         font-weight: 500;
@@ -50,6 +50,22 @@
     flex-direction: column;
     align-items: center;
     gap:1rem;
+
+     .error{
+        width:90%;
+        font-size: 0.7rem;
+        @media (min-width:748px) {
+            width:10rem;
+            font-size: 1rem;
+        }
+        button{
+            padding:0.5rem 1rem;
+            border: none;
+            background-color: #213f5f;
+            color: white;
+            border-radius: 10px;
+        }
+    }
     a{
         display: block;
         text-decoration: none;
