--- a/src/app/components/singlepost/singlepost.component.scss
+++ b/src/app/components/singlepost/singlepost.component.scss
@@ -4,6 +4,28 @@
     gap:1rem;
 
 }
+.singlepostcomment{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .error{
+        width:90%;
+        font-size: 0.7rem;
+        @media (min-width:748px) {
+            width:10rem;
+            font-size: 1rem;
+        }
+        button{
+            padding:0.5rem 1rem;
+            border: none;
+            background-color: #213f5f;
+            color: white;
+            border-radius: 10px;
+        }
+    }
+}
+
 .postcomment{
     background-color: rgb(27, 27, 58);
     color: white;
@@ -13,6 +35,7 @@
     border-radius: 10px;
     width:90%;
     padding: 1rem;
+    margin: 0 auto;
     @media (min-width:992px) {
         width:50rem;
     
