--- a/src/app/components/editpost/editpost.component.html
+++ b/src/app/components/editpost/editpost.component.html
@@ -1,32 +1,34 @@
 <section class="edit">
-        <form [formGroup]="editpostForm" (ngSubmit)="handleSubmit()" class="form">
-            <h2>Edit Post</h2>
-            <div class="input">
-                <label for="title">Title</label>
-            <input type="text" formControlName="title">
-            @if (editpostForm.get('title')?.invalid || (editpostForm.get('title')?.touched || editpostForm.get('title')?.dirty)) {
-            @if (editpostForm.get('title')?.errors?.['required']) {
-                <p class="warning">Title is required</p>
-            }
-            @if (editpostForm.get('title')?.invalid) {
-                <div class="warning">Title must be at least 3 characters</div>
-            }
-            }
-            </div>
-            <div class="input">
-                 <label for="body">Body</label>
-            <input type="text" formControlName="body">
-            @if (editpostForm.get('body')?.invalid || (editpostForm.get('body')?.touched || editpostForm.get('title')?.dirty)) {
-            @if (editpostForm.get('body')?.errors?.['required']) {
-                <p class="warning">Body is required</p>
-            }
-            @if (editpostForm.get('body')?.invalid) {
-                <div class="warning">Body must be at least 3 characters</div>
-            }
-            }
-            </div>
-           
-            <button type="button" (click)="handleCancel()">Cancel</button>
-            <button type="submit">Edit</button>
-        </form>
-    </section>
+    <form [formGroup]="editpostForm" (ngSubmit)="handleSubmit()" class="form">
+        <h2>Edit Post</h2>
+        <div class="input">
+            <label for="title">Title</label>
+        <input type="text" formControlName="title">
+        @if (editpostForm.get('title')?.invalid || (editpostForm.get('title')?.touched || editpostForm.get('title')?.dirty)) {
+        @if (editpostForm.get('title')?.errors?.['required']) {
+            <p class="warning">Title is required</p>
+        }
+        @if (editpostForm.get('title')?.invalid ) {
+            <div class="warning">Title must be at least 3 characters</div>
+            <p class="warning">Must not contain profanity</p>
+        }
+        }
+        </div>
+        <div class="input">
+                <label for="body">Body</label>
+        <input type="text" formControlName="body">
+        @if (editpostForm.get('body')?.invalid || (editpostForm.get('body')?.touched || editpostForm.get('title')?.dirty)) {
+        @if (editpostForm.get('body')?.errors?.['required']) {
+            <p class="warning">Body is required</p>
+        }
+        @if (editpostForm.get('body')?.invalid) {
+            <div class="warning">Body must be at least 3 characters</div>
+             <p class="warning">Must not contain profanity</p>
+        }
+        }
+        </div>
+        
+        <button type="button" (click)="handleCancel()">Cancel</button>
+        <button type="submit">Edit</button>
+    </form>
+</section>
